stop wrapping on header h1
changed the width of text-card from 80vw to 100vw on small screens to stop text wrapping from occuring

--- a/src/components/css/Header.css
+++ b/src/components/css/Header.css
@@ -75,7 +75,7 @@ h1 {
 }
 @media only screen and (max-width:1000px) {
   .text-card {
-    width: 80vw;
+    width: 100vw;
     padding: 0 0 3rem 0;
   }
   .text-card>img {
